# optidesk

./: .gitignore  Makefile.am  README.markdown  configure.ac  optidesk.c
